# ForwardWeGo

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  build_emscripten.bat  generate_vs2022.bat  imgui.ini  premake5.lua  serve_web.py
.claude/: settings.local.json
assets/: batch_fbx_to_obj.py  editor_state.json
assets/maps/: default.map  game.map  level_001.map  level_002.map  level_003.map
assets/maps/game/: game-level-001.map  game-level-002.map  game-level-003.map  game-level-004.map  game-level-005.map  game-level-006.map  game-level-007.map  game-level-008.map  level001.map  level002.map  level003.map  level004.map  level005.map
assets/maps/game3/: game-level-001.map  game-level-002.map  game-level-003.map  game-level-004.map  game-level-005.map  game-level-007.map  game-level-008.map
assets/models/: delete_bak.py  strip_mtl_paths.py
assets/models/sm/: Characters.mtl  Characters.mtl.bak  SM_Bld_Advanced_01.mtl  SM_Bld_Advanced_01.mtl.bak  SM_Bld_Advanced_02.mtl  SM_Bld_Advanced_02.mtl.bak  SM_Bld_Advanced_Doorway_01.mtl  SM_Bld_Background_Small_02.mtl  SM_Bld_Bank_01.mtl  SM_Bld_Bank_01.mtl.bak  SM_Bld_Chopshop_01.mtl  SM_Bld_Chopshop_01.mtl.bak  SM_Bld_City_Wall_01.mtl  SM_Bld_City_Wall_01.mtl.bak  SM_Bld_City_Wall_Tower_01.mtl  SM_Bld_City_Wall_Tower_01.mtl.bak  SM_Bld_Industrial_01.mtl  SM_Bld_Industrial_01.mtl.bak  SM_Bld_Industrial_02.mtl  SM_Bld_Industrial_02.mtl.bak  SM_Bld_LandingPad_01.mtl  SM_Bld_LandingPad_01.mtl.bak  SM_Bld_Large_01.mtl  SM_Bld_Large_01.mtl.bak  SM_Bld_Large_02.mtl  SM_Bld_Large_02.mtl.bak  SM_Bld_Large_03.mtl  SM_Bld_Large_03.mtl.bak  SM_Bld_Large_04.mtl  SM_Bld_Large_05.mtl  SM_Bld_Large_05.mtl.bak  SM_Bld_Large_06.mtl  SM_Bld_Large_Part_01.mtl  SM_Bld_Large_Part_01.mtl.bak  SM_Bld_Large_Part_02.mtl  SM_Bld_Large_Part_02.mtl.bak  SM_Bld_Large_Part_03.mtl  SM_Bld_Large_Part_04.mtl  SM_Bld_Large_Part_04.mtl.bak  SM_Bld_Large_Part_05.mtl  (+463 more)
assets/models/sm-declan/: SM_Bld_Section_Door_06_ArcRoom.mtl  SM_Bld_Section_Door_06_Closed.mtl  SM_Bld_Section_Door_06_Open.mtl  SM_Prop_DeadZub_Green.mtl
assets/models/sm-raw/: SM_Prop_Drone_Ball_01.fbx  SM_Prop_Drone_Quad_01.cfg
assets/player/Arms/: glock.glb  knife.glb  m4.glb
assets/player/Props/: Barrel.fbx  Barrel_Shattered.fbx  Smoke.fbx  Wall.fbx  Wall_Shattered.fbx
assets/player/Weapons/: Arms_AWM_Sniper.fbx  Arms_Combat_Knife.fbx  Arms_Glock_G48.fbx  Arms_Grenade.fbx  Arms_M416_Assault_Rifle.fbx  Glock_Bullet.fbx  Glock_Bullet_Shell.fbx  Grenade.fbx  M416_Bullet.fbx  M416_Bullet_Shell.fbx
assets/shaders/: damage_vignette.frag  flat_color.frag  flat_color.vert  model_lit.frag  model_lit.vert  model_unlit.frag  model_unlit.vert  particle.frag  particle.vert  skinned_lit.vert  skinned_unlit.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  text.frag  text.vert
assets/sounds/: convert_mp3_to_wav.py
atto/src/editor/: editor_asset_browser.cpp  editor_asset_browser.h  editor_asset_packer.cpp  editor_asset_packer.h  editor_asset_thumbnail.cpp  editor_asset_thumbnail.h  editor_brush_tools.cpp  editor_brush_tools.h  editor_property_serializer.cpp  editor_property_serializer.h  editor_scene.cpp  editor_scene.h
atto/src/engine/: atto_assets.cpp  atto_assets.h  atto_assets_packed.cpp  atto_assets_raw.cpp  atto_audio.cpp  atto_audio.h  atto_camera.cpp  atto_camera.h  atto_class_factory.h  atto_containers.h  atto_core.h  atto_engine.cpp  atto_engine.h  atto_input.cpp  atto_input.h  atto_log.cpp  atto_log.h  atto_main.cpp  atto_math.cpp  atto_math.h  atto_particles.cpp  atto_particles.h  atto_renderer.cpp  atto_renderer.h  atto_rng.cpp  atto_rng.h  atto_scene.cpp  atto_scene.h  atto_shapes.cpp  atto_shapes_2D.cpp  atto_shapes_2D.h  atto_shapes_3D.cpp  atto_shapes_3D.h  atto_ui.cpp  atto_ui.h  atto_waypoint_graph.cpp  atto_waypoint_graph.h
atto/src/engine/renderer/: atto_render_material.cpp  atto_render_material.h  atto_render_model.cpp  atto_render_model.h  atto_render_model_helpers.h
atto/src/game/: entities_def.cpp  entities_def.h  game_entities.cpp  game_entities.h  game_global_state.cpp  game_global_state.h  game_main_menu.cpp  game_main_menu.h  game_map.cpp  game_map.h  game_player_card.cpp  game_player_card.h  game_player_controller.cpp  game_player_controller.h  game_player_weapons.cpp  game_player_weapons.h  game_scene_main_menu.cpp  game_scene_main_menu.h  game_scene_map.cpp  game_scene_map.h  game_scene_pick_card.cpp  game_scene_pick_card.h
atto/src/game/entities/: game_entity.cpp  game_entity.h  game_entity_agent.cpp  game_entity_agent.h  game_entity_barrel.cpp  game_entity_barrel.h  game_entity_coin.cpp  game_entity_coin.h  game_entity_coincrate.cpp  game_entity_coincrate.h  game_entity_drone_quad.cpp  game_entity_drone_quad.h  game_entity_exit_door.cpp  game_entity_exit_door.h  game_entity_gamemode_kill_all.cpp  game_entity_gamemode_kill_all.h  game_entity_health_pickup.cpp  game_entity_health_pickup.h  game_entity_portal.cpp  game_entity_portal.h  game_entity_prop.cpp  game_entity_prop.h  game_entity_roach.cpp  game_entity_roach.h  game_entity_spitter.cpp  game_entity_spitter.h  game_entity_spitter_projectile.cpp  game_entity_spitter_projectile.h
atto/src/win32/: atto_win32.cpp
